assets/universal.css
body {
  color: #000000;
  box-sizing: border-box;

}

:root {
  --primary-color: #00abc5;
  --secondary-color: #F6F4EF;
  --white: #FFF;
  --black: #221F20;
  --yellow: #ffdb6d;
}

@font-face {
  font-family: 'PlayfairDisplay-Regular';
  src: url('../fonts/PlayfairDisplay-Regular.ttf');
  font-weight: 400;
}

@font-face {
  font-family: 'PlayfairDisplay-Italic';
  src: url('../fonts/PlayfairDisplay-Italic.ttf');
  font-weight: 400;
}

@font-face {
  font-family: 'PlayfairDisplay-Medium';
  src: url('../fonts/PlayfairDisplay-Medium.ttf');
  font-weight: 500;

}

@font-face {
  font-family: 'HelveticaNowText-light';
  src: url('../fonts/HelveticaNowText-Light.ttf');
  font-weight: 700;

}

@font-face {
  font-family: 'HelveticaNowText-Medium';
  src: url('../fonts/HelveticaNowText-Medium.ttf');
  font-weight: 700;
}

@font-face {
  font-family: 'HelveticaNowText-Regular';
  src: url('../fonts/HelveticaNowText-Regular.ttf');
  font-weight: 400;
}

@font-face {
  font-family: 'Quickpen-regular';
  src: url('../fonts/Quickpen.ttf');
  font-weight: 600;
}

@font-face {
  font-family: 'FamiljenGrotesk-SemiBold';
  src: url('../fonts/FamiljenGrotesk-SemiBold.ttf');
  font-weight: 600;
}


/********** Font Family - Variable *********/
[data-font-style="PlayfairDisplay-Italic"] {
  font-family: 'PlayfairDisplay-Italic';
}

[data-font-style="PlayfairDisplay-Medium"] {
  font-family: 'PlayfairDisplay-Medium';
}

[data-font-style="helveticanowtext-light"] {
  font-family: 'HelveticaNowText-light';
}

[data-font-style="helveticanowtext-medium"] {
  font-family: 'HelveticaNowText-Medium';
}

[data-font-style="helveticanowtext-regular"] {
  font-family: 'HelveticaNowText-Regular';
}

[data-font-style="quickpen-regular"] {
  font-family: 'Quickpen-regular';
}

[data-font-style="familjenGrotesk-semiBold"] {
  font-family: 'Roboto', sans-serif';

}


/********** Font Family - Variable *********/




/********** Default Color *********/


/*** BG Color **/
[data-bgcolor="light"] {
  background-color: #EAE0D6;
}

[data-bgcolor="black"] {
  background-color: #1E1E1E;
}

[data-bgcolor="white"] {
  background-color: #fff;
}

[data-bgcolor="footer-light"] {
  background-color: #F1EFE3;
}

[data-bgcolor="more-light"] {
  background-color: #FFFDF1;
}


/*** BG Color **/



/** Color **/
[data-color="black"] {
  color: #000000;
}

[data-color="light"] {
  color: #EAE0D6;
}

[data-color="white"] {
  color: #ffff;
}





/** Color **/


/********** Default Color *********/



/********** Default Line Height *********/
[line-height="2.5em"] {
  line-height: 2.5em;
}

[line-height="1.7em"] {
  line-height: 1.7em;
}

[line-height="1.6em"] {
  line-height: 1.6em;
}

[line-height="1.5em"] {
  line-height: 1.5em;
}

[line-height="1.4em"] {
  line-height: 1.4em;
}

[line-height="1.3em"] {
  line-height: 1.3em;
}

[line-height="1.2em"] {
  line-height: 1.2em;
}

[line-height="1.1em"] {
  line-height: 1.1em;
}

[line-height="1em"] {
  line-height: 1em;
}

/********** Default Line Height*********/






[data-heading="3rem"] {
  font-size: 3rem;
}




/********** Default Heading *********/
/**** EM Size ***/
[data-heading="7em"] {
  font-size: 7em;
}

[data-heading="5em"] {
  font-size: 5em;
}

[data-heading="4.5em"] {
  font-size: 4.5em;
}

[data-heading="4em"] {
  font-size: 4em;
}

[data-heading="3.5em"] {
  font-size: 3.5em;
}

[data-heading="3em"] {
  font-size: 3em;
}

/**** Pixels Size ***/



[data-heading="120px"] {
  font-size: 120px;
}

[data-heading="112px"] {
  font-size: 112px;
}

[data-heading="105px"] {
  font-size: 105px;
}

[data-heading="80px"] {
  font-size: 80px;
}

[data-heading="78px"] {
  font-size: 78px;
}

[data-heading="75px"] {
  font-size: 75px;
}

[data-heading="70px"] {
  font-size: 70px;
}

[data-heading="65px"] {
  font-size: 65px;
}


[data-heading="60px"] {
  font-size: 60px;
}

[data-heading="50px"] {
  font-size: 50px;
}

[data-heading="48px"] {
  font-size: 48px;
}

[data-heading="40px"] {
  font-size: 40px;
}

[data-heading="32px"] {
  font-size: 32px;
}

[data-heading="28px"] {
  font-size: 28px;
}

[data-heading="26px"] {
  font-size: 26px;
}

[data-heading="24px"] {
  font-size: 24px;
}

[data-heading="20px"] {
  font-size: 20px;
}

[data-heading="18px"] {
  font-size: 18px;
}

[data-heading="16px"] {
  font-size: 16px;
}

[data-heading="14px"] {
  font-size: 14px;
}

[data-heading="12px"] {
  font-size: 12px;
}

/********** Default Heading *********/



/********** Default paragraph *********/

[data-para="50px"] {
  font-size: 50px;
}

[data-para="40px"] {
  font-size: 40px;
}

[data-para="35px"] {
  font-size: 35px;
}

[data-para="30px"] {
  font-size: 30px;
}

[data-para="28px"] {
  font-size: 28px;
}

[data-para="25px"] {
  font-size: 25px;
}


[data-para="22px"] {
  font-size: 22px;
}

[data-para="20px"] {
  font-size: 20px;
}

[data-para="18px"] {
  font-size: 18px;
}

[data-para="17px"] {
  font-size: 17px;
}

[data-para="16px"] {
  font-size: 16px;
}

[data-para="15px"] {
  font-size: 15px;
}

[data-para="14px"] {
  font-size: 14px;
}

[data-para="12px"] {
  font-size: 12px;
}

[data-para="1.4em"] {
  font-size: 1.4em;
}

[data-para="1.3em"] {
  font-size: 1.3em;
}

[data-para="1.2em"] {
  font-size: 1.2em;
}

/********** Default paragraph *********/
@media (max-width:1920px) {
  [data-heading="105px"] {
    font-size: 90px;
  }

  [data-heading="80px"] {
    font-size: 50px;
  }

  [data-heading="70px"] {
    font-size: 50px;
  }

  [data-heading="78px"] {
    font-size: 50px;
  }

  [data-heading="75px"] {
    font-size: 50px;
  }

}

@media (max-width:1450px) {
  [data-heading="105px"] {
    font-size: 90px;
  }

  [data-heading="80px"] {
    font-size: 45px;
  }

  [data-heading="70px"] {
    font-size: 45px;
  }

  [data-heading="78px"] {
    font-size: 45px;
  }

  [data-heading="75px"] {
    font-size: 45px;
  }

  [data-para="28px"] {
    font-size: 25px;
  }

  [data-para="25px"] {
    font-size: 22px;
  }

  [data-para="22px"] {
    font-size: 22px;
  }
}

@media (max-width:1350px) {
  [data-heading="80px"] {
    font-size: 40px;
  }

  [data-heading="70px"] {
    font-size: 40px;
  }

  [data-heading="78px"] {
    font-size: 40px;
  }

  [data-heading="75px"] {
    font-size: 40px;
  }

  [data-para="25px"] {
    font-size: 20px;
  }

  [data-para="28px"] {
    font-size: 20px;
  }

  [data-para="22px"] {
    font-size: 20px;
  }
}

/****** Font Family *******/
@media (max-width:1200px) {
  [data-para="18px"] {
    font-size: 16px;
  }

  [data-para="14px"] {
    font-size: 12px;
  }

  [data-heading="48px"] {
    font-size: 40px;
  }

  [data-para="25px"] {
    font-size: 19px;
  }

  [data-para="28px"] {
    font-size: 22px;
  }

  [data-para="22px"] {
    font-size: 19px;
  }
}

@media(max-width:1024px) {
  [data-heading="105px"] {
    font-size: 70px;
  }

  [data-heading="80px"] {
    font-size: 40px;
  }

  [data-heading="70px"] {
    font-size: 40px;
  }

  [data-heading="78px"] {
    font-size: 40px;
  }

  [data-heading="75px"] {
    font-size: 40px;
  }

  [data-heading="48px"] {
    font-size: 30px;
  }

  [data-heading="32px"] {
    font-size: 30px;
  }

  [data-para="25px"] {
    font-size: 18px;
  }

  [data-para="28px"] {
    font-size: 20px;
  }

  [data-para="22px"] {
    font-size: 18px;
  }
}

@media (max-width:768px) {
  [data-heading="105px"] {
    font-size: 60px;
  }

  [data-heading="80px"] {
    font-size: 35px;
  }

  [data-heading="70px"] {
    font-size: 35px;
  }

  [data-heading="78px"] {
    font-size: 35px;
  }

  [data-heading="75px"] {
    font-size: 35px;
  }

  [data-heading="60px"] {
    font-size: 35px;
  }

  [data-heading="120px"] {
    font-size: 90px;
  }

  [data-para="30px"] {
    font-size: 25px;
  }

  [data-heading="48px"] {
    font-size: 28px;
  }

  [data-heading="32px"] {
    font-size: 27px;
  }

  [data-heading="30px"] {
    font-size: 30px;
  }

  [data-heading="28px"] {
    font-size: 28px;
  }

  [data-heading="26px"] {
    font-size: 25px;
  }

  [data-para="25px"] {
    font-size: 17px;
  }

  [data-para="28px"] {
    font-size: 20px;
  }

  [data-para="22px"] {
    font-size: 17px;
  }

  [data-para="20px"] {
    font-size: 20px;
  }

  [data-para="18px"] {
    font-size: 16px;
  }

  [data-para="14px"] {
    font-size: 12px;
  }
}

@media (max-width:500px) {
  [data-heading="40px"] {
    font-size: 35px;
  }

  [data-heading="60px"] {
    font-size: 35px;
  }

  [data-heading="80px"] {
    font-size: 35px;
  }

  [data-heading="70px"] {
    font-size: 35px;
  }

  [data-heading="78px"] {
    font-size: 35px;
  }

  [data-heading="75px"] {
    font-size: 35px;
  }

  [data-heading="120px"] {
    font-size: 70px;
  }

  [data-heading="48px"] {
    font-size: 26px;
  }

  [data-para="30px"] {
    font-size: 23px;
  }

  [data-heading="32px"] {
    font-size: 26px;
  }

  [data-heading="25px"] {
    font-size: 20px;
  }

  [data-heading="22px"] {
    font-size: 22px;
  }

  [data-para="20px"] {
    font-size: 20px;
  }

  [data-heading="18px"] {
    font-size: 16px;
  }

  [data-para="17px"] {
    font-size: 16px;
  }


  [data-para="16px"] {
    font-size: 16px;
  }

  [data-para="15px"] {
    font-size: 15px;
  }

  [data-para="14px"] {
    font-size: 12px;
  }

  [data-para="12px"] {
    font-size: 12px;
  }
}

/****** Font Family ******/
@media (max-width:450px) {
  [data-heading="40px"] {
    font-size: 35px;
  }

  [data-heading="70px"] {
    font-size: 35px;
  }

  [data-heading="60px"] {
    font-size: 35px;
  }

  [data-heading="80px"] {
    font-size: 35px;
  }

  [data-heading="78px"] {
    font-size: 35px;
  }

  [data-heading="75px"] {
    font-size: 35px;
  }
}

@media (max-width:380px) {
  [data-heading="40px"] {
    font-size: 30px;
  }

  [data-heading="70px"] {
    font-size: 30px;
  }

  [data-heading="60px"] {
    font-size: 30px;
  }

  [data-heading="80px"] {
    font-size: 30px;
  }

  [data-heading="78px"] {
    font-size: 30px;
  }

  [data-heading="75px"] {
    font-size: 30px;
  }
}

